# cuda-library-template

./: CMakeLists.txt  LICENSE  README.md
include/: acutest.h
include/cuda_starter/: cuda_starter.h  utils.h
src/: CMakeLists.txt  cuda_starter.cu  utils.cu  vector_add.cu
tests/: CMakeLists.txt  test_vector_add.cpp
